Elección de Favicon y tipografía. Conección con la hoja de Estilos

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-</head>
-body>
-<header>
-   <img src="https://st3.depositphotos.com/10614052/36593/i/450/depositphotos_365937464-stock-photo-portrait-young-businesswoman-tablet-computer.jpg" alt="Fotografía de Jazmín, sino puede visualizarla intente acceder con otro dispositivo" width="300px">
-   <h1>JAZMÍN SOTO</h1>
-   <h2>CONTADORA</h2>
-  </header>
+    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR79O0pchdz1c3Cbqwn1wNUcbtx85g7zK0lmw&usqp=CAU">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&family=PT+Serif&display=swap" rel="stylesheet">
+</head> 
+    
+<body>
+   <header>
+    <img src="https://st3.depositphotos.com/10614052/36593/i/450/depositphotos_365937464-stock-photo-portrait-young-businesswoman-tablet-computer.jpg" alt="Fotografía de Jazmín, sino puede visualizarla intente acceder con otro dispositivo" width="300px">
+    <h1>JAZMÍN SOTO</h1>
+    <h2>CONTADORA</h2>
+   </header>
 
   <section>
      <ul>
