Diseñando el aside

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 <body>
    <aside>
-      <img src="https://st3.depositphotos.com/10614052/36593/i/450/depositphotos_365937464-stock-photo-portrait-young-businesswoman-tablet-computer.jpg" alt="Fotografía de Jazmín, sino puede visualizarla intente acceder con otro dispositivo" width="300px">
+      <img src="https://st3.depositphotos.com/10614052/36593/i/450/depositphotos_365937464-stock-photo-portrait-young-businesswoman-tablet-computer.jpg" alt="Fotografía de Jazmín Soto, sino puede visualizarla intente acceder con otro dispositivo" width="300px">
          
       <section>
        <ul>
