--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website"/>
     <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR79O0pchdz1c3Cbqwn1wN
      Ucbtx85g7zK0lmw&usqp=CAU">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
          <div>
             <h1>JAZMÍN SOTO</h1>
             <span>CONTADORA</spanS>
-         </div>
+         </div>       
      </section> 
    </header>
    
@@ -125,7 +125,12 @@
                álculos y revisones para garantizar la correción de pagos y registros.  </P>
           </div>  
       </section>
+
+   
+      <button type="button"  id="boton_contacto">Contáctame</button>
+      <div id="contactame"></div>   
    </div>
    
+ <script src="js/funcion.js"> </script>
 </body>
 </html>
